Made it a percentile and fixed account address being cutoff

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -5,7 +5,8 @@
 
 // Table column alignment for consistent two-column tables
 .table.two-column-labels tbody tr td:first-child {
-  width: 420px;
+  width: 40%;
+  min-width: 226px;
   white-space: nowrap;
 }
 
